tests/ivg/invalid/invalid_stroke_joints.ivg
format IVG-3
// unrecognized stroke joints
pen joints:curvy
